@@ -45,9 +45,10 @@ Digest::SHA           = 0
 File::Copy::Recursive = 0
 
 [Prereqs / DevelopRequires]
-DBD::Pg     = 3.5.0
-DBD::mysql  = 4.00
-DBD::SQLite = 1.44
+DBD::Pg      = 3.5.0
+DBD::mysql   = 4.00
+DBD::MariaDB = 1.00
+DBD::SQLite  = 1.44
 
 [Prereqs / TestRequires]
 Capture::Tiny = 0.20
